Table User {
  id text [pk]
  email text [unique, not null]
  name text [not null]
}

Table Task {
  id text [pk]
  title text [not null]
  description text
  completed boolean [not null, default: false]
  deadline timestamp(3)
  priority Priority
  workspaceId text [not null]
}

Table Event {
  id text [pk]
  title text [not null]
  description text
  start timestamp(3) [not null]
  end timestamp(3) [not null]
  workspaceId text [not null]
}

Table TaskTag {
  tag text [not null]
  taskId text [not null]

  indexes {
    (tag, taskId) [unique]
  }
}

Table EventTag {
  tag text [not null]
  eventId text [not null]

  indexes {
    (tag, eventId) [unique]
  }
}

Table Workspace {
  id text [pk]
  name text [not null]
  ownerId text [not null]
}

Table WorkspaceMember {
  userId text [not null]
  workspaceId text [not null]
  role WorkspaceMemberRole [not null]

  indexes {
    (userId, workspaceId) [pk]
  }
}

Table WorkspaceInvite {
  email text [not null]
  workspaceId text [not null]
  memberRole WorkspaceMemberRole [not null]

  indexes {
    (email, workspaceId) [unique]
  }
}

Table TaskAssignee {
  taskId text [not null, ref: > Task.id]
  assigneeId text [not null, ref: > User.id]

  indexes {
    (taskId, assigneeId) [unique]
  }
}

Table EventAttendee {
  eventId text [not null, ref: > Event.id]
  attendeeId text [not null, ref: > User.id]

  indexes {
    (eventId, attendeeId) [unique]
  }
}

Table TaskDependency {
  parentId text [not null, ref: > Task.id]
  dependencyId text [not null, ref: > Task.id]
}

Enum Priority {
  LOW
  MEDIUM
  HIGH
}

Enum WorkspaceMemberRole {
  MANAGER
  MEMBER
}

Ref: Task.workspaceId > Workspace.id [delete: Cascade]

Ref: Event.workspaceId > Workspace.id [delete: Cascade]

Ref: TaskTag.taskId > Task.id [delete: Cascade]

Ref: EventTag.eventId > Event.id [delete: Cascade]

Ref: Workspace.ownerId > User.id

Ref: WorkspaceMember.userId > User.id [delete: Cascade]

Ref: WorkspaceMember.workspaceId > Workspace.id [delete: Cascade]

Ref: WorkspaceInvite.workspaceId > Workspace.id [delete: Cascade]
